[package]
name = "ipopt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surge-ping = "0.8.1"
tokio = { version = "1.21.2", features = ["full"] }
ipnet = "2.10.1"
futures = "0.3.31"
rand = "0.8.5"

[profile.release]
strip = true 
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
